--- a/package.json
+++ b/package.json
@@ -7,7 +7,27 @@
     "start": "node src/index.js",
     "dev": "nodemon src/index.js",
     "test": "jest",
+    "test:unit": "jest src/tests/unit",
+    "test:integration": "jest src/tests/integration",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage",
     "init-db": "node src/scripts/init-db.js"
+  },
+  "jest": {
+    "testEnvironment": "node",
+    "setupFilesAfterEnv": [
+      "<rootDir>/src/tests/setupJest.js"
+    ],
+    "collectCoverageFrom": [
+      "src/**/*.js",
+      "!src/tests/**",
+      "!src/docs/**",
+      "!src/scripts/**"
+    ],
+    "coverageDirectory": "coverage",
+    "testMatch": [
+      "**/tests/**/*.test.js"
+    ]
   },
   "dependencies": {
     "cors": "^2.8.5",
@@ -17,6 +37,7 @@
     "express-session": "^1.17.3",
     "geoip-lite": "^1.4.9",
     "helmet": "^7.1.0",
+    "ioredis": "^5.5.0",
     "joi": "^17.12.2",
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
@@ -27,6 +48,7 @@
     "redis": "^4.6.13",
     "swagger-ui-express": "^5.0.0",
     "ua-parser-js": "^1.0.37",
+    "validator": "^13.12.0",
     "winston": "^3.11.0",
     "yamljs": "^0.3.0"
   },
