--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -39,8 +39,11 @@ jobs:
           host: ${{ secrets.VPS_HOST }}
           username: ${{ secrets.VPS_USERNAME }}
           key: ${{ secrets.VPS_SSH_KEY }}
+          envs: DOCKERHUB_USERNAME,DOCKERHUB_TOKEN
           script: |
             cd /root/docker/url_shortener_alter_office
+            # Login to Docker Hub
+            echo "${{ secrets.DOCKERHUB_TOKEN }}" | docker login -u "${{ secrets.DOCKERHUB_USERNAME }}" --password-stdin
             # Stop and remove existing container
             docker compose down
             # Remove the existing image to force a new pull
@@ -51,4 +54,6 @@ jobs:
             # Start the services
             docker compose up --build -d
             # Clean up unused images
-            docker image prune -f 
+            docker image prune -f
+            # Logout from Docker Hub for security
+            docker logout 
