--- a/docker-compose-full.yml
+++ b/docker-compose-full.yml
@@ -17,7 +17,7 @@ services:
       - POSTGRES_PORT=5432
       - POSTGRES_DB=url_shorty
       - POSTGRES_USER=postgres
-      - POSTGRES_PASSWORD=postgres
+      - POSTGRES_PASSWORD=
       - REDIS_HOST=redis
       - REDIS_PORT=6379
     depends_on:
@@ -65,7 +65,7 @@ services:
       - "5432:5432"
     environment:
       POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: postgres
+      POSTGRES_PASSWORD:
       POSTGRES_DB: url_shorty
     volumes:
       - postgres_data:/var/lib/postgresql/data
